syntax = "proto3";

option csharp_namespace = "gRPCServer";

package message;

// The greeting service definition.
service StreamMessage {
  // Sends a greeting
  rpc SayHello (MessageRequest) returns (stream MessageReply);
}

// The request message containing the user's name.
message MessageRequest {
  string name = 1;
}

// The response message containing the greetings.
message MessageReply {
  string message = 1;
  int32 index=2;
}
